--- a/templates/register.html
+++ b/templates/register.html
@@ -82,7 +82,7 @@
     </header>
     <nav>
         <a href="#">Home</a>
-        <a href="#">Kampe</a>
+        <a href="#">Kampe/tunering</a>
         <a href="#">Spillere</a>
         <a href="#">Nyheder</a>
         <a href="#">Kontakt</a>
