--- a/templates/home.html
+++ b/templates/home.html
@@ -53,7 +53,7 @@
     </header>
     <nav>
         <a href="#">Home</a>
-        <a href="#">Kampe</a>
+        <a href="#">Kampe/tunering</a>
         <a href="#">Spillere</a>
         <a href="#">Nyheder</a>
         <a href="#">Kontakt</a>
