--- a/templates/home.html
+++ b/templates/home.html
@@ -53,10 +53,10 @@
     </header>
     <nav>
         <a href="#">Home</a>
-        <a href="#">Kampe/tunering</a>
+        <a href="tunering.html">Kampe/tunering</a>
         <a href="#">Spillere</a>
         <a href="#">Nyheder</a>
-        <a href="#">Kontakt</a>
+        <a href="shop.html">Shop</a> <!-- Corrected href attribute -->
     </nav>
     <section>
         <h2>Velkommen til ålhom's if hjemmeside</h2>
