--- a/templates/login.html
+++ b/templates/login.html
@@ -94,6 +94,6 @@
         <input type="password" id="password" name="password" required><br><br>
         <input type="submit" value="Login">
     </form>
-    <p>Don't have an account? <a href="register.html">Register</a></p>
+    <p>Don't have an account? <a href="/register">Register</a></p>
 </body>
 </html>
