--- a/templates/register.html
+++ b/templates/register.html
@@ -94,6 +94,6 @@
         <input type="password" id="password" name="password" required><br><br>
         <input type="submit" value="Register">
     </form>
-    <p>Already have an account? <a href="login.html">Login</a></p>
+    <p>Already have an account? <a href="/login">Login</a></p>
 </body>
 </html>
