--- a/templates/shop.html
+++ b/templates/shop.html
@@ -121,7 +121,7 @@
     </header>
     <nav>
         <a href="/home">Home</a>
-        <a href="tunering.html">Kampe/tunering</a>
+        <a href="/turnering">Kampe/tunering</a>
         <a href="#">Spillere</a>
         <a href="#">Nyheder</a>
         <a href="#" class="cart-icon">
