--- a/templates/turnering.html
+++ b/templates/turnering.html
@@ -70,6 +70,7 @@
         <a href="#" title="Spillere">Spillere</a>
         <a href="#" title="Nyheder">Nyheder</a>
         <a href="/shop" title="Shop">Shop</a>
+        <a href="/matches" title="Matches">Matches</a> <!-- Added Matches button -->
     </nav>
     <section>
         <h2>Velkommen til Ålholm IF tunerings register</h2>
@@ -81,6 +82,8 @@
             <input type="text" id="team_name" name="team_name" required><br><br>
             <input type="submit" value="Gem holdnavn">
         </form>
+        <br> <!-- Added line break -->
+        <a href="/matches">Show Matches</a> <!-- Matches button -->
     </section>
     <footer>
         &copy; Ålholm IF. All rights reserved.
