--- a/templates/home.html
+++ b/templates/home.html
@@ -52,11 +52,10 @@
         <h1>Ålholm IF</h1>
     </header>
     <nav>
-        <a href="#">Home</a>
-        <a href="/turnering">Kampe/tunering</a> <!-- Updated href attribute -->
-        <a href="#">Spillere</a>
-        <a href="#">Nyheder</a>
-        <a href="/shop">Shop</a> <!-- Updated href attribute -->
+        <a href="/home">Home</a>
+        <a href="/shop">Shop</a>
+        <a href="{{ url_for('logout') }}" title="Logout">Logout</a>
+        <a href="/matches">Matches</a>
     </nav>
     <section>
         <h2>Velkommen til ålhom's if hjemmeside</h2>
