--- a/templates/home.html
+++ b/templates/home.html
@@ -56,6 +56,8 @@
         <a href="/shop">Shop</a>
         <a href="{{ url_for('logout') }}" title="Logout">Logout</a>
         <a href="/matches">Matches</a>
+        <a href="#" onclick="showSection('leaderboardSection')">Leaderboard</a>
+        <a href="/turnering">Tunering</a>
     </nav>
     <section>
         <h2>Velkommen til ålhom's if hjemmeside</h2>
