--- a/templates/matches.html
+++ b/templates/matches.html
@@ -95,7 +95,8 @@
         <a href="/shop">Shop</a>
         <a href="{{ url_for('logout') }}" title="Logout">Logout</a>
         <a href="/matches">Matches</a>
-        <a href="#" onclick="showSection('tournamentsSection')">Tournaments</a>
+        <a href="/turnering">Tunering</a>
+        <a href="#" onclick="showSection('tournamentsSection')">OnGoingTournaments</a>
     </nav>
     <section id="leaderboardSection">
         <form action="/matches" method="post">
