--- a/templates/shop.html
+++ b/templates/shop.html
@@ -124,6 +124,7 @@
         <a href="/shop">Shop</a>
         <a href="{{ url_for('logout') }}" title="Logout">Logout</a>
         <a href="/matches">Matches</a>
+        <a href="/turnering">Tunering</a>
         <a href="#" class="cart-icon">
             <img src="{{ url_for('static', filename='soppingcart.jpg') }}" alt="Shopping Cart">
             <span class="cart-count">0</span>
