--- a/templates/turnering.html
+++ b/templates/turnering.html
@@ -92,8 +92,7 @@
         <a href="/shop">Shop</a>
         <a href="{{ url_for('logout') }}" title="Logout">Logout</a>
         <a href="/matches">Matches</a>
-        <a href="#" onclick="showSection('leaderboardSection')">Leaderboard</a>
-        <a href="#" onclick="showSection('tournamentsSection')">Tournaments</a>
+        <a href="/turnering">Tunering</a>
     </nav>
     <section>
         <h2>Velkommen til Ålholm IF tunerings register</h2>
